Fix u- bar styling, centering, and align buttons

--- a/renderer/style.css
+++ b/renderer/style.css
@@ -187,10 +187,13 @@ label #cancel{
    font-size: 15px;
    margin: 0px;
    background: none;
-   color:#fff;
+   color:#0b2732;
    position: relative;
    border: transparent;
+   
 }
+
+
 
 .custom-btn::before{
     content: '';
@@ -198,16 +201,16 @@ label #cancel{
     top: 40px;
     left: -2px;
     height: 20px;
-    width: 65px;
+    width: 5%;
     /* background-color: #868686; */
     /* transform: perspective(80px) rotateX(-120deg); */
     /* filter: blur(20px); */
 }
 
 .active, .custom-btn:hover{
-    background-color:#9eb6c2;
+    background-color:rgba(96, 139, 100, 0.658);
     color: #000;
-    box-shadow: 0 0 26px 1px#0a5275;
+    box-shadow: 0 0 26px 1px#519385;
 }
 
 .bold {
@@ -223,17 +226,23 @@ label #cancel{
 }
 
 #mydiv{
-    text-align: center;
+    
+        display: flex;
+         justify-content: center; 
+        width: 100%;
+    
 }
 
 #ui-bar{
     
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid black;
-    /* height: fit-content;
-    width:fit-content */
+    justify-content: center; 
+    align-items: center; 
+    border: 2px solid rgb(69, 102, 72);
+    border-radius:2cm;
+    width: 20%;
+    margin-left: 40%;
+    background: rgba(255, 255, 255, 0.541);
 }
 
 /* #quitBtn{
